# stream

./: README.md  stack.yaml  stream.cabal
src/: Main.hs
src/A/: Stream.hs
src/B/: Stream.hs
src/Data/: Stream.hs
