name:                stream
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/stream#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2021 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:
      A.Stream
  hs-source-dirs:
      src
  build-depends:
      base >= 4.7 && < 5
  default-language: Haskell2010

executable stream-exe
  other-modules:
      A.Stream
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       stream
